renamed FontAccessibilityScalingEnabled to FontAutoScalingEnabled

--- a/samples/PINView.Samples/Views/SampleViews/FontSizeSampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/FontSizeSampleView.xaml
@@ -52,7 +52,7 @@
                       IsPassword="False"
                       PINLength="5"
                       PINValue="12345"
-                      FontAccessibilityScalingEnabled="False"
+                      FontAutoScalingEnabled="False"
                       Style="{StaticResource PINViewStyle}" />
                 </StackLayout>
             </StackLayout>
