--- a/samples/PINView.Samples/Views/SampleViews/FontSizeSampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/FontSizeSampleView.xaml
@@ -45,7 +45,7 @@
                     <Label
                       Margin="0,20,0,0"
                       HorizontalTextAlignment="Center"
-                      Text="FontSize = 32, FontAccessibilityScalingEnabled = False" />
+                      Text="FontSize = 32, FontAutoScalingEnabled = False" />
                     <pinView:PINView
                       x:Name="pinView3"
                       FontSize="32"
